PROJECT(echo)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE_DIRECTORIES(../deps/include)
INCLUDE_DIRECTORIES(../)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}")
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../build)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(echo ${DIR_SRCS})
TARGET_LINK_LIBRARIES(echo libkhaki.a)
TARGET_LINK_LIBRARIES(echo liblog4cpp.a)
